# Linompss

./: .gitignore  AUTHORS  Readme.md  configure.ac
src/async/: Makefile.am
src/blocked_blas/: Makefile.am  Makefile.am.old  bblas_axpy.h  bblas_axpy_async.h  bblas_convert.h  bblas_copy.h  bblas_dot.h  bblas_dot_async.c  bblas_dot_async.h  bblas_dot_old.h  bblas_gemm.h  bblas_gemv.h  bblas_syrk.h  bblas_trsm.h  bblas_util.h  blocked_util.h  qr_assist.c  qr_assist.h  task_axpy.c  task_axpy.h  task_axpy_async.c  task_axpy_async.h  task_convert.c  task_convert.h  task_copy.c  task_copy.h  task_dot.c  task_dot.h  task_dot_async.c  task_dot_async.h  task_gemm.c  task_gemm.h  task_gemv.c  task_gemv.h  task_geqrf.c  task_geqrf.h  task_larfb.c  task_larfb.h  task_tsmqr.c  task_tsmqr.h  (+20 more)
src/blocked_sblas/: Makefile.am  async.c  async.h  bsblas_csrmm.h  bsblas_csrmmb.h  bsblas_gemm_csr.h  bsblas_gemv_csr.h  task_csrmm.c  task_csrmm.h  task_csrmmb.c  task_csrmmb.h  tasks_gemv_csr.c  tasks_gemv_csr.h  tasks_potrf_csr.c  tasks_potrf_csr.h  tasks_trsm_csr.c  tasks_trsm_csr.h
src/cg/: Makefile.am  cg.c  cg_config.c  cg_config.h  cg_main.c  cg_main.h  cg_setup.c  cg_setup.h
src/cg/old/: Makefile.am  cg.c  cg_config.c  cg_functions_step.h  cg_kernels_step.c  cg_kernels_step.h  cg_main.c  cg_main.h  cg_main_backup.c  cg_main_lookahead.c  cg_main_lookahead2.c  cg_main_naiv.c  cg_main_seq.c  cg_main_step.c  cg_setup.c  cg_setup.h  cgas_workspace.h  cgmod1_main.c  cgmod1_main.h  cgmod1_workspace.h  cgpipe_main.c  cgpipe_main.h  cgpipe_workspace.h  cgprof_main.c  cgprof_main.h  cgs_config.c  cgs_main.c  cgs_main.h  cgs_setup.c  cgsched2_main.c  cgsched_main.c  cgsched_main.h  cgsparse_setup.c  ompss_cg.c  ompss_cg.h  test.c
src/cg/old/orig/: ConjugateGradient.c  ScalarVectors.c  ScalarVectors.h  SparseMatrices.c  SparseMatrices.h
src/cholesky/dense/: Makefile.am  chol.c  chol_check.c  chol_check.h  chol_config.c  chol_hcheck.c  chol_hllmain.c  chol_hrlmain.c  chol_hsetup.c  chol_llmain.c  chol_llmain.h  chol_nllmain.c  chol_nrlmain.c  chol_psetup.c  chol_rlmain.c  chol_rlmain.h  chol_setup.c  ompss_dense_chol.c  ompss_dense_chol.h
src/cholesky/dense/kernels/: Makefile.am  chol_kernels.c  chol_kernels.h  (+1 more)
src/cholesky/sparse/: Makefile.am  chol.c  chols_config.c  chols_llmain.c  chols_llmain.h  chols_setup.c  chols_warm.c  chols_warm.h  ompss_sparse_chol.c  ompss_sparse_chol.h
src/csparse/: Makefile.am  dcsparse.c  dcsparse.h  scsparse.c  scsparse.h
src/gauss_seidel/: Makefile.am  gauss-seidel.c  gauss-seidel_check.c  gauss-seidel_check.h  gauss-seidel_config.c  gauss-seidel_config.h  gauss-seidel_main.c  gauss-seidel_main.h  gauss-seidel_setup.c  gauss-seidel_setup.h  ompss_sparse_gs.c  ompss_sparse_gs.h
src/gemm/: Makefile.am  csrmm_check.c  csrmm_config.c  csrmm_main.c  csrmm_main.h  csrmm_setup.c  csrmmb_check.c  csrmmb_config.c  csrmmb_main.c  csrmmb_main.h  csrmmb_setup.c  matmul.c  matmul_check.h  matmul_config.h  matmul_setup.h  mm.c  mm.h  mm_check.c  mm_config.c  mm_main.c  mm_main.h  mm_setup.c  ompss_gemm.c  ompss_gemm.h  ompss_mm.c  ompss_mm.h
src/gensolv/: Makefile.am  gensolv.c  gensolv_check.c  gensolv_check.h  gensolv_config.c  gensolv_config.h  gensolv_main.c  gensolv_main.h  gensolv_setup.c  gensolv_setup.h
src/geqr/: Makefile.am  Makefile.am.old  geqr.c  geqr_setup.c  geqr_setup.h  geqrf_main.c  geqrf_main.h  qr_check.c  qr_check.h  qr_config.c  qr_config.h
src/geqr/new/: qrcab_main.c  qrcabin_main.c  qrcarect_nodeps_main.c  qrcareordr_main.c  split_dlarfb_hier_task.c
src/geqr/old/: NoFLA_Apply_BlockH_var1.c  NoFLA_Apply_BlockH_var1.h  NoFLA_Apply_td_QT_var31a.c  NoFLA_Apply_td_QT_var31a.h  NoFLA_Apply_td_QT_var31a_hier.c  NoFLA_Apply_td_QT_var31a_rectangle.c  NoFLA_Compute_dense_QR_var31a.h  NoFLA_Compute_td_QR_var31a_hier.c  NoFLA_Compute_td_QR_var31a_rectangle.c  NoFLA_Compute_td_QR_var31b.c  NoFLA_QR_tS_unb_var1.c  NoFLA_QR_tS_unb_var1.h  qrca_kernels.h  qrca_kernels_dgeqt2.c  qrca_kernels_dlarfb.c  qrca_kernels_dlarfb_hier.c  qrca_kernels_hier.h  qrca_variations.h
src/geqr/orig/: NoFLA_Apply_td_BlockH_var1.c  NoFLA_Apply_td_BlockH_var1.h  NoFLA_Apply_td_BlockH_var1_hier.c  NoFLA_Apply_td_BlockH_var1_hier.h  NoFLA_QR_td_unb_var1.c  NoFLA_QR_td_unb_var1.h  NoFLA_QR_td_unb_var1_hier.c  NoFLA_QR_td_unb_var1_updateS.c
src/itref/: Makefile.am  itref.c  itref_config.c  itref_config.h  itref_setup.c  itref_setup.h
src/jacobi/: Makefile.am  jacobi.c  jacobi_check.c  jacobi_check.h  jacobi_config.c  jacobi_config.h  jacobi_main.alternative  jacobi_main.c  jacobi_main.c.bak  jacobi_main.h  jacobi_setup.c  jacobi_setup.h  ompss_sparse_jacobi.c  ompss_sparse_jacobi.h
src/lu/: Makefile.am  lu.c  lu_check.c  lu_check.h  lu_config.c  lu_config.h  lu_kernels.c  lu_kernels.h  lu_main.c  lu_main.h  lu_setup.c  lu_setup.h  lull_main.c  lull_main.h  lurecurs_main.c  lurecurs_main.h  ompss_lu.c  ompss_lu.h
src/matutil/: Makefile.am  convertmat.c  convertmat.h  densutil.c  densutil.h  genmat.c  genmat.h  genmat_config.c  genmat_config.h  hb.c  hb.h  hbconvrt.c  hbconvrt.h  hbdebug.c  hbdebug.h  hbext.c  hbext.h  hbmalloc.c  hbpad.c  hbpad.h  iohb.c  iohb.h  matfprint.c  matfprint.h  matfread.c  matfread.h  ompss_mat.h  symfac.c  symfac.h
src/spdsolv/: Makefile.am  spdsolv.c  spdsolv_check.c  spdsolv_check.h  spdsolv_config.c  spdsolv_config.h  spdsolv_main.c  spdsolv_main.h  spdsolv_setup.c  spdsolv_setup.h
src/syrk/: Makefile.am  ompss_syrk.c  ompss_syrk.h  syrk.c  syrk_check.c  syrk_check.h  syrk_config.c  syrk_config.h  syrk_main.c  syrk_main.h  syrk_setup.c  syrk_setup.h
src/trsm/: Makefile.am  ompss_trsm.c  ompss_trsm.h  trsm.c  trsm_check.c  trsm_check.h  trsm_config.c  trsm_config.h  trsm_main.c  trsm_main.h  trsm_setup.c  trsm_setup.h
src/util/: Makefile.am  Makefile.am.bak  array.h  as_man.c  as_man.h  async_struct.c  async_struct.h  file_log.c  file_log.h  ompss_apps.c  ompss_apps.h  ompss_options.c  ompss_options.h  ompss_priorities.c  prof.c  prof.h  selfsched.c  selfsched.h  strutil.c  strutil.h  task_log.c  task_log.h  vector.h  vector.h.bak
(+50 files in other folders)
